2003-10-03  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.[ch], timidity/readmidi.[ch]:
	  Hack up around channel layer
	* timidity/timidity.c:
	  Rewrite help a little
	  Rename --effects -> --ext
	  Rename -EFresample -> -EFresamp

2003-10-03  mput <root@mput.dip.jp>

	* timidity/Makefile.in: redo automake to fit with Iwai's commit

2003-10-02  Takashi Iwai <tiwai@suse.de>

	* configure.in, timidity/Makefile.am, timidity/resample.c,
	  timidity/resample.h, timidity/recache.c, timidity/timidity.c,
	  timidity/timidity.h, timidity/playmidi.c, timidity/playmidi.h,
	  timidity/calcnewt.c:
	  Use functions instead of macros for resamplation.  This doesn't
	  make the operation slower (even somtimes faster!).
	  The algorithm can be switched either by option --resample or
	  -EFresample (i.e. dynamically changable on ncurses interface).
	  The default algorighm is kept to gauss (defined in timidity.h).
	  
	  The behavior of -N option is now dependent on which algorithm
	  is being chosen.  -N0 for gauss and newton will switch to linear
	  interpolation for keeping compatibility.
	  
	  The gauss interpolation is optimized a bit for the default case.
	  It will give more chance for the compiler to make its job better.
	  
	  The newton coeff. table is included statically in the source
	  code, which was calculated formerly by calcnewt.c.

2003-10-01  mput <root@mput.dip.jp>

	* configure: autoreconf

2003-10-01  Takashi Iwai <tiwai@suse.de>

	* timidity/optcode.c, timidity/optcode.h:
	  Use macros instead of functions for imuldiv*() on generic
	  architectures.
	
2003-10-01  Takashi Iwai <tiwai@suse.de>

	* timidity/aRts_a.c, timidity/output.c: Removed arts2 output mode,
	  which is identical with arts mode, indeed.
	  Fixed wrong cast of pointer to integer.
	  Fixed the detect function of aRts.

2003-09-30  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* configure.in:
	  Change order of Tcl/Tk library version

2003-09-29  TAMUKI Shoichi <tamuki@linet.gr.jp>
