@@ -1,3 +1,8 @@
+2003-10-04  TAMUKI Shoichi <tamuki@linet.gr.jp>
+
+	* timidity/playmidi.c, timidity/readmidi.c:
+	  Fix around channel layer
+
 2003-10-03  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
 	* timidity/playmidi.[ch], timidity/readmidi.[ch]:
@@ -7,7 +12,7 @@
 	  Rename --effects -> --ext
 	  Rename -EFresample -> -EFresamp
 
-2003-10-03  mput <root@mput.dip.jp>
+2003-10-03  mput <root@Mput.dip.jp>
 
 	* timidity/Makefile.in: redo automake to fit with Iwai's commit
 
